--- a/TestProject/Assembly-CSharp.csproj
+++ b/TestProject/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\script_Side.cs" />
      <Compile Include="Assets\script_v001.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
